CampingProject/force-app/main/default/objects/Camper__c/Camper__c.object-meta.xml
<CustomObject>
    <label>Camper</label>
    <nameField>
        <label>Camper Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>