CampingProject/force-app/main/default/objects/Camper__c/fields/Empty_Weight__c.field-meta.xml
<CustomField>
    <fullName>Empty_Weight__c</fullName>
    <inlineHelpText>Alpha numeric entry</inlineHelpText>
    <label>Empty Weight</label>
    <length>32</length>
    <type>Text</type>
</CustomField>