CampingProject/force-app/main/default/objects/Camper__c/fields/Features__c.field-meta.xml
<CustomField>
    <fullName>Features__c</fullName>
    <description>Just list the basic features not specified in other fields</description>
    <label>Features</label>
    <length>255</length>
    <type>Text</type>
</CustomField>