CampingProject/force-app/main/default/objects/Camper__c/fields/Fresh_Water_Tank_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Fresh_Water_Tank_Capacity__c</fullName>
    <label>Fresh Water Tank Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>