CampingProject/force-app/main/default/objects/Camper__c/fields/Fully_loaded_Weight__c.field-meta.xml
<CustomField>
    <fullName>Fully_loaded_Weight__c</fullName>
    <label>Fully loaded Weight</label>
    <length>18</length>
    <type>Text</type>
</CustomField>