CampingProject/force-app/main/default/objects/Camper__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <description>Text entry for full length</description>
    <label>Length</label>
    <length>40</length>
    <type>Text</type>
</CustomField>