CampingProject/force-app/main/default/objects/Camper__c/fields/Trailer_Height__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Height__c</fullName>
    <inlineHelpText>Is an alpha numeric entry</inlineHelpText>
    <label>Trailer Height</label>
    <length>32</length>
    <type>Text</type>
</CustomField>