CampingProject/force-app/main/default/objects/Camper__c/listViews/Current_Campers.listView-meta.xml
<ListView>
    <fullName>Current_Campers</fullName>
    <columns>NAME</columns>
    <columns>Purchase_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>241RLK</value>
    </filters>
    <label>Current Campers</label>
</ListView>